substrate/primitives/runtime/proc-macro/tests/ui/wrong_input10.stderr
error: unexpected end of input, Expected at least one predicate
  --> tests/ui/wrong_input10.rs:20:56
   |
20 | #[with_features_try_runtime_and_runtime_benchmarks(all())]
   |                                                        ^
